:construction: Setting up Eslint, Prettier and EditorConfig

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ecommerce-typescript-app",
+  "name": "ecommerce-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
